feat: add burger menu button

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
                 <li class="header__nav-item"><a href="#">Education</a></li>
             </ul>
         </nav>
+        <button class="header__menu">
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
+        </button>
         <div class="header__buttons">
             <button class="header__button"></button>
             <button class="header__button">Resume</button>
         </div>
     </header>
-    
+    <script src="scripts/index.js"></script>
 </body>
 </html>
