--- a/index.html
+++ b/index.html
@@ -21,16 +21,30 @@
                 <li class="header__nav-item"><a href="#">Education</a></li>
             </ul>
         </nav>
-        <button class="header__menu">
-            <div class="one"></div>
-            <div class="two"></div>
-            <div class="three"></div>
-        </button>
         <div class="header__buttons">
             <button class="header__button"></button>
             <button class="header__button">Resume</button>
         </div>
+
+        <button id="header__menu" class="header__menu">
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
+        </button>
     </header>
+
+    <section class="menu__popup">
+        <nav>
+            <ul>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Experience</a></li>
+                <li><a href="#">Education</a></li>
+            </ul>
+            <button class="menu__popup_button">Resume</button>
+        </nav>
+
+    </section>
     <script src="scripts/index.js"></script>
 </body>
 </html>
