--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
         <div class="header__buttons">
             <button class="header__button"></button>
-            <button class="header__button">Resume</button>
+            <button class="header__button"><a href="./Anastasiia_Iuferova_JunFrontendDev.pdf" class="header__link" download>Resume</a></button>
         </div>
 
         <button id="header__menu" class="header__menu">
@@ -41,7 +41,7 @@
                 <li><a href="#">Experience</a></li>
                 <li><a href="#">Education</a></li>
             </ul>
-            <button class="menu__popup_button">Resume</button>
+            <button class="menu__popup_button"><a href="./Anastasiia_Iuferova_JunFrontendDev.pdf" class="header__link" download>Resume</a></button>
         </nav>
 
     </section>
