feat: header icon

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </ul>
         </nav>
         <div class="header__buttons">
-            <button class="header__button"></button>
-            <button class="header__button"><a href="./Anastasiia_Iuferova_JunFrontendDev.pdf" class="header__link" download>Resume</a></button>
+            <button class=" header__button header__button_color"></button>
+            <button class="header__button "><a href="./Anastasiia_Iuferova_JunFrontendDev.pdf" class="header__link" download>Resume</a></button>
         </div>
 
         <button id="header__menu" class="header__menu">
