--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Plus Jakarta Sans' rel='stylesheet'>
     <title>Anastasiia Portfolio
     </title>
 </head>
@@ -15,10 +16,9 @@
         </div>
         <nav class="header__nav">
             <ul>
+                <li><a href="#">About me</a></li>
                 <li class="header__nav-item"><a href="#">Skills</a></li>
                 <li class="header__nav-item"><a href="#">Projects</a></li>
-                <li class="header__nav-item"><a href="#">Experience</a></li>
-                <li class="header__nav-item"><a href="#">Education</a></li>
             </ul>
         </nav>
         <div class="header__buttons">
@@ -33,18 +33,62 @@
         </button>
     </header>
 
+    <section id="me" class="about-me">
+        <div class="about-me__content">
+            <h3 class="sub-heading">My name is</h3>
+            <h1>Anastasiia</h1>
+            <p>Creative junior front-end developer with more than 1 year of studying + pet projects experience. Previously, worked in marketing and SMM for several years. Familiar with both front-end and backend technologies. 
+                Passionate about web development and photography.</p>
+            <div class="about-me__links">
+                
+                <a href="https://github.com/AnastasiiaUferova"  target="_blank" rel="noopener" class="about-me__link"><img alt="icon GH" class="about-me__link-image" src="/images/Github-grey.svg"></a>
+    
+                <a href="https://www.linkedin.com/in/anastasiia-iuferova-frontend-dev/" target="_blank" class="about-me__link">
+                    <img alt="icon LN" class="about-me__link-image" src="/images/Linkedin-grey.svg">
+                </a>
+            </div>
+        </div>
+
+        <div class="about-me__image">
+            <div class="about-me__decor"></div>
+            <img src="/images/Avatar.jpg" alt="Avatar" class="about-me__image-main">
+        </div>
+    </section>
+
+
+    <section id="skills" class="about-me">
+        <span class="cloud"></span>
+        <div class="about-me__content">
+            <h3 class="sub-heading">Skills</h3>
+            <h2>Main Techs & Skills</h2>
+            <p>Creative junior front-end developer with more than 1 year of studying + pet projects experience. Previously, worked in marketing and SMM for several years. Familiar with both front-end and backend technologies. 
+                Passionate about web development and photography.</p>
+        </div>
+    </section>
+
+
     <section class="menu__popup">
         <nav>
             <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About me</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">Education</a></li>
             </ul>
             <button class="menu__popup_button"><a href="./Anastasiia_Iuferova_JunFrontendDev.pdf" class="header__link" download>Resume</a></button>
         </nav>
 
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
