--- a/index.html
+++ b/index.html
@@ -129,6 +129,17 @@
 </section>
 
 </main>
+
+<footer class="footer">
+    <div>
+    <a href="https://github.com/AnastasiiaUferova"  target="_blank" rel="noopener" class="about-me__link"><img alt="icon GH" class="about-me__link-image" src="/images/Github-grey.svg"></a>
+    
+    <a href="https://www.linkedin.com/in/anastasiia-iuferova-frontend-dev/" target="_blank" class="about-me__link">
+        <img alt="icon LN" class="about-me__link-image" src="/images/Linkedin-grey.svg">
+    </a>
+</div>
+
+</footer>
  </body>
  
    
